@@ -1,10 +1,11 @@
-7/25/2024 V0.1.1		 - patch level 291
+7/25/2024 V0.1.1		 - patch level 394
 	* Updated LICENSE headers in sources
 	* Added mknod, and hostname commands to set of utilities
 	* Added free
 	* Added xxd, od, and hexdump to set of utilities
 	* Added w and vmstat
 	* Added cut and grep
+	* Added tr, sort, uniq, uptime ps, and kill to set of utilities
 
 7/17/2024 V0.1.0		 - patch level 241
 	* Merged example3 to the Minibox SHell
